subnetworks.tf
resource "google_compute_subnetwork" "dev-subnet" {
  ip_cidr_range = "10.0.1.0/24"
  name          = "devsubnet"
  network       = google_compute_network.our_gcp_dev_vpc_one.self_link
  region        = "us-west1"
}

resource "aws_subnet" "subnet1" {
  cidr_block        = cidrsubnet(aws_vpc.our_aws_dev_vpc_one.cidr_block, 3, 1)
  vpc_id            = aws_vpc.our_aws_dev_vpc_one.id
  availability_zone = "us-west-2a"
}

resource "aws_subnet" "subnet2" {
  cidr_block        = cidrsubnet(aws_vpc.our_aws_dev_vpc_one.cidr_block, 2, 2)
  vpc_id            = aws_vpc.our_aws_dev_vpc_one.id
  availability_zone = "us-west-2b"
}

resource "aws_security_group" "subnetsecurity" {
  vpc_id = aws_vpc.our_aws_dev_vpc_one.id
  ingress {
    cidr_blocks = [
      aws_vpc.our_aws_dev_vpc_one.cidr_block
    ]
    from_port = 80
    protocol  = "tcp"
    to_port   = 80
  }
}
